website/versioned_docs/version-0.77.0/ais_app_assistent_commands.md
---
title: Wbudowane komendy
sidebar_label: Wbudowane komendy
id: version-0.77.0-ais_app_assistent_commands
original_id: ais_app_assistent_commands
---

Domyślnie asystent obsługuje:

## Sterowanie urządzeniami

* **Włączanie i wyłączanie urządzeń**:
Możesz powiedzieć "włącz oświetlenie w kuchni" lub "wyłącz światło w salonie" lub "włącz lampy zewnętrzne" lub "wyłącz podlewanie trawnika" lub "włącz wentylator poziom dwa" W ten sposób możesz sterować oświetleniem i przełącznikami.

* **Otwieranie i zamykanie**
Możesz powiedzieć "otwórz bramę w garażu" lub "odsłoń rolety w salonie" lub "zamknij furtkę w ogrodzie" lub "zasłoń wszystkie rolety". W ten sposób możesz sterować roletami i bramami.


## Odtwarzanie audio

* **Włączanie stacji radiowych**
Wystarczy, że powiedz "Włącz RMF" lub "Graj radio Zet" lub po prostu "Radio trójka"

* **Słuchanie podcastów**
Żeby pobrać najnowsze odcinki podcasta i włączyć ostatni z nich wystarczy, że powiedz "Podcast Niebezpiecznik" lub "Włącz podcast jak oszczędzać pieniądze"

* **Słuchanie muzyki z YouTube**
Żeby wyszukac na YouTube interesującą Cię muzykę i ją odtwarzać wystarczy, że powiedz "Muzyka Maria Peszek" lub "YouTube Brodka"


## Status czujników

O status każdego elementu systemu możesz zapytać Asystenta

* **Sprawdzanie wartości czujników**
Wystarczy, że zapytasz "Jaka jest temperatura w salonie" lub "Jaka jest wilgotność w łazience", możesz też pytac o czujnikie zewnętrzne raportujące dane z serwisów, np. "jaki jest poziom UV" czy "jaka jest pozycja słońca"

* **Sprawdzanie wartości innych dowolnych elementów systemu**
Zapytaj "jaki jest adres IP" by otrzymać informację o IP urządzenia, lub "jaki jest status światła w kuchni" by dowiedzieć się czy światło jest włączone lub "jaki jest głos" by otrzymać informację o ustawionym głosie asystenta


## Informacja o pogodzie

* **Sprawdzanie aktualnej pogody**
Wystarczy, że powiedz "jaka jest pogoda" by otrzymać informację o aktualnej pogodzie w Twojej lokalizacji

* **Sprawdzanie prognozy pogody**
Wystarczy, że zapytasz "jaka będzie pogoda"  by otrzymać informację o prognozie pogody dla Twojej lokalizacji

## Wyszukiwanie informacji
Zapytaj "Co to jest ONZ" lub "Kto to jest Andrzej Duda" by otrzymać zwięzłą informację z bazy wiedzy


## Godzina i data
Tu oczywiście działają komendy typu "Która godzina" i "Jaki jest dzisiaj dzień"


## Aktywowanie sceny
Zdefiniowaną scenę można aktywować komendą "Scena romantyczna" lub "Aktywuj scenę oglądanie filmu"
